<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Keith and the Girl Comedy Podcast</string>
    <string name="app_short_name">KATG</string>
    <string name="action_login">VIP</string>
    <string name="action_settings">Settings</string>
    <string name="action_broadcasting">Live</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_work_items">Work Items</string>
    <string name="action_bar_tab_events">Schedule</string>
    <string name="action_bar_tab_shows">Shows</string>
    <string name="action_bar_tab_guests">Guests</string>
    <string name="action_bar_tab_live">Live</string>
    <string name="action_bar_tab_youtube">Youtube</string>
    <string name="action_bar_tab_about">About</string>
    <string name="episode_label">EPISODE</string>
    <string name="episode_description_label">Description</string>
    <string name="episode_images_label">Images</string>
    <string name="episode_description_no_details">No Details</string>
    <string name="episode_guests_label">Guests</string>
    <string name="episode_no_guests">No Guests</string>
    <string name="episode_not_played">Not Played</string>
    <string name="episode_not_downloaded">Not Downloaded</string>
    <string name="youtube_preview">(Preview)</string>
    <string name="title_activity_shows">ShowsActivity</string>
    <string name="title_activity_workitems">WorkItemsActivity</string>
    <string name="no_network_connection_toast">No network connection found</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_the_show_title">The Show</string>
    <string name="about_the_show">Keith and the Girl is a free comedy talk show hosted by <a href="">Keith Malley</a> and <a href="">Chemda</a>. Topics include current events, pop culture, politics and even intimate details of their lives. A new hour-long show is posted each weekday.</string>
    <string name="about_the_show_keith_title">Keith Malley</string>
    <string name="about_the_show_keith">After a mere year performing stand-up comedy, Keith Malley was the 2004 grand prize winner at the prestigious World Comedy Laugh Off in New York City. He immediately recorded his debut CD/DVD Coming of Age and vowed to record a new one-take only CD/DVD each and every birthday with all new material. He has just released his tenth CD/DVD which has reached #1 in iTunes in multiple countries.</string>
    <string name="about_the_show_keith_button">More on Keith</string>
    <string name="about_the_show_chemda_title">Chemda</string>
    <string name="about_the_show_chemda">Chemda was born in Isreal and has lived in New York City since she was 4 years old. She currently lives in Queens with her fiance, actor Lauren Hennessy. She is a talk show host, writer and singer.</string>
    <string name="about_the_show_chemda_2">In addition to Keith and the Girl, Chemda is host of the What\'s My Name Show found on the KATG network. Along with Keith, Chemda\'s first published book, What Do We Do Now? (A relationship advice book) was released March, 2010 and went into its second printing within one week of its release.</string>
    <string name="about_the_show_chemda_button">More on Chemda</string>
    <string name="title_activity_video_player">VideoPlayerActivity</string>
    <string name="playerfragment_text">This is a YouTubePlayerFragment!</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="add_widget">Add widget</string>
    <string name="failed">Playback failed</string>
    <string name="title_activity_episode">EpisodeActivity</string>
    <string name="loading">Loading…</string>
    <string name="loading_shows">Loading Shows…</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="network_connected_title">Network Not Connected</string>
    <string name="network_connected_message">Check your network settings and try again.</string>
    <string name="close">Close</string>
    <string name="navigation_drawer_open">Navigation drawer open</string>
    <string name="navigation_drawer_close">Navigation drawer closed</string>
    <string name="katg_actionbar_title">KATG</string>
    <string name="live_show_info">You will be able to listen to the show live and send feedback directly to hosts Keith and Chemda. They respond to listener feedback live on the show.</string>
    <string name="live_title_not_broadcasting">NEXT LIVE SHOW</string>
    <string name="live_title_broadcasting">ON AIR</string>

    <plurals name="timerSeconds">
        <item quantity="one"><big>%d</big> second</item>
        <item quantity="other"><big>%d</big> seconds</item>
    </plurals>
    <plurals name="timerMinutes">
        <item quantity="one"><big>%d</big> minute</item>
        <item quantity="other"><big>%d</big> minutes</item>
    </plurals>
    <plurals name="timerHours">
        <item quantity="one"><big>%d</big> hour</item>
        <item quantity="other"><big>%d</big> hours</item>
    </plurals>
    <plurals name="timerDays">
        <item quantity="one"><big>%d</big> day</item>
        <item quantity="other"><big>%d</big> days</item>
    </plurals>
    <plurals name="timerWeeks">
        <item quantity="one"><big>%d</big> week</item>
        <item quantity="other"><big>%d</big> weeks</item>
    </plurals>
    <plurals name="timerMonths">
        <item quantity="one"><big>%d</big> month</item>
        <item quantity="other"><big>%d</big> months</item>
    </plurals>

    <string name="title_activity_detail_player_controls">DetailPlayerControlsActivity</string>

    <string name="processShowsFailure">An error occurred loading the KATG Shows!</string>
    <string name="processEventsFailure">An error occurred loading the events!</string>
    <string name="processEpisodesFailure">An error occurred loading the episodes!</string>
    <string name="processEpisodeDetailsFailure">An error occurred loading the episode details!</string>
    <string name="processYoutubeVideosFailure">An error occurred loading the youtube videos!</string>
    <string name="menu_item_shows">Shows</string>
    <string name="menu_item_guests">Guests</string>
    <string name="menu_item_live">Live</string>
    <string name="menu_item_schedule">Schedule</string>
    <string name="menu_item_youtube">Youtube</string>
    <string name="menu_item_about">About</string>
    <string name="menu_item_settings">Settings</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">close drawer</string>

</resources>
