<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:katg="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.keithandthegirl.app.ui.MainActivity" >

    <item android:id="@+id/action_broadcasting"
        android:title="@string/action_broadcasting"
        android:orderInCategory="100"
        android:icon="@drawable/ic_live_mic_off"
        katg:showAsAction="always" />

    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:orderInCategory="200"
        android:icon="@drawable/ic_action_refresh"
        katg:showAsAction="ifRoom" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="300"
        katg:showAsAction="never" />

    <item android:id="@+id/action_work_items"
        android:title="@string/action_work_items"
        android:orderInCategory="400"
        katg:showAsAction="never" />

</menu>
